tests/errors/Dima/test.c
int main() 
{	
	draw_number(arr);
	//hjk //нужно раскоментить чтобы код дальнейший читался корректно
	return 0;
}
